Package: doFuture
=================

Version: 0.5.1-9000 [2017-09-14]

 o ...
 

Version: 0.5.1 [2017-09-11]

RANDOM NUMBER GENERATION:

 o Package now suggests doRNG (>= 1.6.6), which fixes several bugs in
   doRNG (>= 1.6) previously suggested.
   
SOFTWARE QUALITY:

 o TESTS: Adding tests for globals part of other packages for future.BatchJobs
   and future.batchtools futures because in previous versions of those, such
   globals would not be found because the corresponding package was never
   attached in the worker.
 

Version: 0.5.0 [2017-03-31]

NEW FEATURES:

 o Added foreach() option to control whether scheduling ("chunking") should
   take place or not, and if so, how granular it should be.  This is specified
   as foreach(..., .options.future = list(scheduling = <value>)).  With
   scheduling = 1.0 (or equivalently scheduling = TRUE), the the elements
   (iterations) will be split up in equally sized chunks such that each backend
   worker will process exactly one chunk.  With scheduling = Inf (or
   equivalently scheduling = FALSE), chunking is disabled, i.e. each worker
   process exactly one element at the time.  If schedule = 0.0, then a single
   workers processes all elements (and the other workers will not be used).
   If 2.0, then each worker will process two chunks, and so on.  If above
   option is not set, then .options.multicore = list(preschedule = <logical>))
   which is defined by doParallel, is used to mean scheduling = preschedule.
   If that is not set, then scheduling = 1.0 is used by default.

SOFTWARE QUALITY:
	 
 o TESTS: Now the doFuture package tests can be configured to also run the
   the help examples of the foreach and plyr packages with the doFuture
   adaptor.  To further increase the coverage of these tests, the plyr example
   code is tweaked on-the-fly to set .parallel = TRUE.  The default is to
   test against all of the future strategies that comes with the future